Rework to make it work (but still buggy)

--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,10 @@
 <Html Lang="en">
 <Head>
 <Meta Charset="utf-8">
-<Meta Name="application-name" Content="Dialog.dart">
 <Meta Name="author" Content="Pavel Dvořák">
 <Meta Name="description" Content="Modern alert, confirm and prompt dialog implementation">
 <Meta Name="keywords" Content="dialog,dart,alert,confirm,prompt,package,dvorapa">
-<Meta Name="robots" Content="follow,index">
-<Meta Name="version" Content="0.1.0+3">
+<Meta Name="version" Content="0.2.0-dev">
 <Link Type="text/css" Rel="stylesheet" Href="style.css">
 <Title>Dialog.dart</Title>
 </Head>
@@ -65,6 +63,6 @@ querySelector("#promptButton").onClick.listen((_){
 Do you need to use them all at once? Try it by importing dialog.dart file.
 
 <Script Type="application/dart" Src="index.dart"></Script>
-<Script Type="application/javascript" Src="dart.js"></Script>
+<Script Src="packages/browser/dart.js"></Script>
 </Body>
 </Html>
