--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 <Meta Name="author" Content="Pavel Dvořák">
 <Meta Name="description" Content="Modern alert, confirm and prompt dialog implementation">
 <Meta Name="keywords" Content="dialog,dart,alert,confirm,prompt,package,dvorapa">
-<Meta Name="version" Content="0.4.0-dev">
+<Meta Name="version" Content="0.4.0">
 <Link Type="text/css" Rel="stylesheet" Href="style.css">
 <Title>Dialog.dart</Title>
 </Head>
@@ -43,8 +43,8 @@ querySelector("#alertButton").onClick.listen((_) {
 Replaces default confirm dialog.
 
 <Code><Pre>
-querySelector("#confirmButton").onClick.listen((_) {
-  var myConfirm = confirm("Confirmed?!");
+querySelector("#confirmButton").onClick.listen((_) async {
+  var myConfirm = await confirm("Confirmed?!");
   alert(myConfirm.toString());
 });
 </Pre></Code>
@@ -56,8 +56,8 @@ querySelector("#confirmButton").onClick.listen((_) {
 Adds missing prompt dialog.
 
 <Code><Pre>
-querySelector("#promptButton").onClick.listen((_) {
-  var myPrompt = prompt("Prompted?!", "Yes!");
+querySelector("#promptButton").onClick.listen((_) async {
+  var myPrompt = await prompt("Prompted?!", "Yes!");
   alert(myPrompt.toString());
 });
 </Pre></Code>
@@ -67,6 +67,20 @@ querySelector("#promptButton").onClick.listen((_) {
 <H3>dialog.dart</H3>
 
 Do you need to use them all at once? Try it by importing dialog.dart file.
+
+<H2>Known Issues</H2>
+
+* **Bootstrap doesn't use the newest version!**
+* **Why don't you use pub's Bootstrap?**
+  * In v3.3.4 is a bug, which displays backdrop in the front. I'm waiting for the fix in the next release.
+
+<H2>Contributing</H2>
+
+Please fill in an issue or a pull request on project's [GitHub page](https://github.com/dvorapa/dialog-dart). In PR please observe the style of commit messages using the imperative mood.
+
+<H2>License</H2>
+
+[The BSD 2-Clause License](https://github.com/dvorapa/dialog-dart/blob/master/LICENSE)
 
 <Script Type="application/dart" Src="index.dart"></Script>
 <Script Src="packages/browser/dart.js"></Script>
