--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 <Meta Name="author" Content="Pavel Dvořák">
 <Meta Name="description" Content="Modern alert, confirm and prompt dialog implementation">
 <Meta Name="keywords" Content="dialog,dart,alert,confirm,prompt,package,dvorapa">
-<Meta Name="version" Content="0.4.1+1">
+<Meta Name="version" Content="0.5.0">
 <Link Type="text/css" Rel="stylesheet" Href="style.css">
 <Title>Dialog.dart</Title>
 </Head>
@@ -68,21 +68,11 @@ querySelector("#promptButton").onClick.listen((_) async {
 
 <H4>dialog.dart</H4>
 
-Do you need to use them all at once? Try it by importing dialog.dart file.
-
-<H2>Known Issues</H2>
-
-<Ul>
-<Li><B>Bootstrap doesn't use the newest version!</B></Li>
-<Li><B>Why don't you use pub's Bootstrap?</B></Li>
-<Ul>
-<Li>In v3.3.4 is a bug, which displays backdrop in the front. I'm waiting for the fix in the next release.</Li>
-</Ul>
-</Ul>
+Do you need to use them all at once? Try to import dialog.dart file only!
 
 <H2>Contributing</H2>
 
-Please fill in an issue or a pull request on project's <a href="https://github.com/dvorapa/dialog-dart">GitHub page</a>. In PR please observe the style of commit messages using the imperative mood.
+Please fill in an issue or a pull request on project's <a href="https://github.com/dvorapa/dialog-dart">GitHub page</a>.
 
 <H2>License</H2>
 
