--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
 <Meta Name="author" Content="Pavel Dvořák">
 <Meta Name="description" Content="Modern alert, confirm and prompt dialog implementation">
 <Meta Name="keywords" Content="dialog,dart,alert,confirm,prompt,package,dvorapa">
-<Meta Name="version" Content="0.5.0">
+<Meta Name="version" Content="0.6.0">
 <Link Type="text/css" Rel="stylesheet" Href="style.css">
 <Title>Dialog.dart</Title>
 </Head>
@@ -78,7 +78,6 @@ Please fill in an issue or a pull request on project's <a href="https://github.c
 
 <a href="https://github.com/dvorapa/dialog-dart/blob/master/LICENSE">The BSD 2-Clause License</a>
 
-<Script Type="application/dart" Src="index.dart"></Script>
-<Script Src="packages/browser/dart.js"></Script>
+<Script Defer Src="index.dart.js"></Script>
 </Body>
 </Html>
