Null safety and convert to dart template

--- a/example/index.html
+++ b/example/index.html
@@ -69,6 +69,6 @@ querySelector("#modalButton").onClick.listen((_) async {
 
 Do you need to use them all at once? Try to import dialog.dart file only!
 
-<Script Defer Src="index.dart.js"></Script>
+<Script Defer Src="example.dart.js"></Script>
 </Body>
 </Html>
